UX: top contributors: fix wrapping with long numbers and alignment (#79)

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -48,6 +48,7 @@
 .top-contributors--user-likes {
   grid-area: right;
   justify-self: end;
+  white-space: nowrap;
 }
 
 // Recent replies
